--- a/TestJs/TEST/index.html
+++ b/TestJs/TEST/index.html
@@ -32,6 +32,16 @@
         Convert to Lowercase
       </button>
       <p id="sampleOutput"></p>
+
+      <!-- Api meteo -->
+      <div class="mb-3">
+        <label for="cityInput" class="form-label">Enter a city:</label>
+        <input type="text" class="form-control" id="cityInput" placeholder="City name" />
+      </div>
+      <button id="getWeatherButton" class="btn btn-primary">Get Weather</button>
+      <div id="weatherResult" class="mt-3"></div>
+      <div id="weatherError" class="mt-3 text-danger"></div>
+      
     </main>
   </body>
 </html>
