--- a/TestJs/TP-09/tp09-affichagePaysInfos.html
+++ b/TestJs/TP-09/tp09-affichagePaysInfos.html
@@ -50,9 +50,44 @@
             text-align: center;
             margin-top: 50px;
         }
+        nav {
+            background-color: #2c3e50;
+            padding: 15px 0;
+            margin: -20px -20px 20px -20px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+            font-weight: 500;
+        }
+        nav a:hover {
+            background-color: #34495e;
+        }
+        nav a.active {
+            background-color: #3498db;
+        }
     </style>
 </head>
 <body onload="chargerPaysInfos()">
+    <nav>
+        <ul>
+            <li><a href="tp09-affichagePaysInfos.html" class="active">Informations Pays</a></li>
+            <li><a href="filtrage-polluants.html">Filtrage Polluants</a></li>
+        </ul>
+    </nav>
+
     <h1>Informations sur les Pays du Monde</h1>
     <div id="resultat" class="loading">Chargement des données...</div>
     <script src="affichagePaysInfos.js"></script>
